--- a/app/src/main/res/layout/shoutout_item_new.xml
+++ b/app/src/main/res/layout/shoutout_item_new.xml
@@ -1,31 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/pfp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/km1" />
+    <data>
+        <variable
+            name="shoutout"
+            type="com.example.nogrammers_android.Shoutouts" />
+    </data>
 
-    <TextView
-        android:id="@+id/msg"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pfp"
-        app:layout_constraintTop_toTopOf="@+id/pfp"
-        tools:text="Wednesday" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/pfp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:pfp="@{shoutout}"
+            tools:srcCompat="@drawable/km1" />
+
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Kanga"
+            android:paddingStart="10dp"
+            android:textStyle="bold"
+            app:author="@{shoutout}"
+            app:layout_constraintBottom_toTopOf="@id/pfp"
+            app:layout_constraintStart_toEndOf="@id/pfp" />
+
+        <TextView
+            android:id="@+id/msg"
+            android:paddingStart="20dp"
+            android:paddingEnd="0dp"
+            android:paddingTop="3dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/pfp"
+            app:layout_constraintTop_toTopOf="@+id/pfp"
+            app:msg="@{shoutout}"
+            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tristique interdum nibh sit amet aliquam" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
