split shoutouts into fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,66 +6,66 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
         android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/shoutouts_view"
+        <fragment
+            android:id="@+id/so_fragment"
+            android:name="com.example.nogrammers_android.ShoutoutsFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_weight="2"
-            android:scrollbars="vertical"
-            app:layoutManager="LinearLayoutManager" />
-
-        <EditText
-            android:id="@+id/editTextName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Author"
-            android:inputType="textPersonName"
+            android:layout_height="match_parent"
             />
 
-        <EditText
-            android:id="@+id/editTextMsg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Who's a good roo?"
-            android:inputType="textMultiLine"
-            />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/shoutouts_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="top"-->
+<!--            android:layout_weight="2"-->
+<!--            android:scrollbars="vertical"-->
+<!--            app:layoutManager="LinearLayoutManager" />-->
 
-            <Button
-                android:id="@+id/postButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_weight="1"
-                android:text="Post Shoutout" />
+<!--        <EditText-->
+<!--            android:id="@+id/editTextName"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:ems="10"-->
+<!--            android:hint="Author"-->
+<!--            android:inputType="textPersonName"-->
+<!--            />-->
 
-            <Button
-                android:id="@+id/cancelButton"
-                android:layout_width="0dp"
-                android:layout_marginEnd="20dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_weight="1"
-                android:backgroundTint="#808080"
-                android:text="Cancel" />
-        </LinearLayout>
-        <!--        <fragment-->
-        <!--            android:id="@+id/myNavHostFragment"-->
-        <!--            android:name="com.example.nogrammers_android.NavHostFragment"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            />-->
+<!--        <EditText-->
+<!--            android:id="@+id/editTextMsg"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:ems="10"-->
+<!--            android:hint="Who's a good roo?"-->
+<!--            android:inputType="textMultiLine"-->
+<!--            />-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/postButton"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="start"-->
+<!--                android:layout_marginStart="20dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="Post Shoutout" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/cancelButton"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="end"-->
+<!--                android:layout_weight="1"-->
+<!--                android:backgroundTint="#808080"-->
+<!--                android:text="Cancel" />-->
+<!--        </LinearLayout>-->
     </LinearLayout>
-
 </layout>
