--- a/app/src/main/res/layout/fragment_shoutouts.xml
+++ b/app/src/main/res/layout/fragment_shoutouts.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shoutouts_view"
@@ -24,8 +24,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Author"
-            android:inputType="textPersonName"
-            />
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/editTextMsg"
@@ -33,8 +32,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Who's a good roo?"
-            android:inputType="textMultiLine"
-            />
+            android:inputType="textMultiLine" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,9 +51,9 @@
             <Button
                 android:id="@+id/cancelButton"
                 android:layout_width="0dp"
-                android:layout_marginEnd="20dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_marginEnd="20dp"
                 android:layout_weight="1"
                 android:backgroundTint="#808080"
                 android:text="Cancel" />
