--- a/app/src/main/res/layout/shoutout_item.xml
+++ b/app/src/main/res/layout/shoutout_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="shoutout"
             type="com.example.nogrammers_android.Shoutouts" />
@@ -45,7 +46,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textStyle="bold"
-            app:author="@{shoutout}"
+            app:date="@{shoutout}"
             app:layout_constraintBottom_toBottomOf="@+id/author"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/author"
