--- a/app/src/main/res/layout/fragment_shoutouts.xml
+++ b/app/src/main/res/layout/fragment_shoutouts.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".ShoutoutsFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shoutouts_view"
