--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -13,6 +13,6 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="TODO: put events here" />
+            android:text="@string/todo_put_events_here" />
     </LinearLayout>
 </layout>
