--- a/app/src/main/res/layout/shoutout_item.xml
+++ b/app/src/main/res/layout/shoutout_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="shoutout"
-            type="com.example.nogrammers_android.Shoutouts" />
+            type="com.example.nogrammers_android.shoutouts.Shoutout" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
