Refactored file structure and started announcements page (#2)
* added blank announcements and profile fragments

* implemented simple recyler view for announcements

* refactored shoutouts by renaming to singular and creating a package

* More package refactoring; light styling

--- a/app/src/main/res/layout/fragment_announcements.xml
+++ b/app/src/main/res/layout/fragment_announcements.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -7,12 +6,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
+        android:orientation="vertical">
 
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/announcements_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/todo_put_events_here" />
+            android:layout_height="0dp"
+            android:layout_gravity="top"
+            android:layout_weight="2"
+            android:scrollbars="vertical"
+            app:layoutManager="LinearLayoutManager" />
     </LinearLayout>
+
 </layout>
