--- a/app/src/main/res/layout/fragment_shoutouts.xml
+++ b/app/src/main/res/layout/fragment_shoutouts.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".ShoutoutsFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shoutouts_view"
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Author"
+            android:hint="@string/author"
             android:inputType="textPersonName" />
 
         <EditText
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Who's a good roo?"
+            android:hint="@string/who_s_a_good_roo"
             android:inputType="textMultiLine" />
 
         <LinearLayout
@@ -46,7 +46,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
-                android:text="Post Shoutout" />
+                android:text="@string/post_shoutout" />
 
             <Button
                 android:id="@+id/cancelButton"
@@ -56,13 +56,14 @@
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
                 android:backgroundTint="#808080"
-                android:text="Cancel" />
+                android:text="@string/cancel"
+                tools:targetApi="lollipop" />
         </LinearLayout>
 
         <Button
             android:id="@+id/navEventsBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Events" />
+            android:text="@string/events" />
     </LinearLayout>
 </layout>
