--- a/app/src/main/res/layout/announcement_item.xml
+++ b/app/src/main/res/layout/announcement_item.xml
@@ -13,14 +13,15 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
         app:cardElevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="15dp">
+            android:paddingHorizontal="25dp"
+            android:paddingVertical="30dp">
 
             <TextView
                 android:id="@+id/announcement_date"
@@ -36,7 +37,7 @@
                 android:id="@+id/announcement_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="7dp"
+                android:layout_marginVertical="10dp"
                 android:textColor="@color/olive"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -49,10 +50,11 @@
                 android:id="@+id/announcement_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
+                android:layout_marginVertical="10dp"
                 android:textColor="@color/goldenrod"
                 android:textStyle="bold"
                 app:author="@{announcement}"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/announcement_title"
                 tools:text="Charlie Brown" />
@@ -62,6 +64,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/olive"
+                android:textSize="16sp"
+                android:layout_marginVertical="5dp"
                 app:content="@{announcement}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/announcement_author"
