--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".announcements.CreateAnnouncementFragment"
-    android:padding="25dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/newAnnounceHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/cancelAnnounceBtn"
-        android:textColor="@color/olive"
-        android:text="New announcement" />
-
-    <Button
-        android:id="@+id/cancelAnnounceBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Cancel" />
-
-    <EditText
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:id="@+id/newAnnouncementTitle"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/newAnnounceHeader"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textSize="20sp"
-        android:hint="Announcement Title" />
+        android:background="@color/white"
+        android:padding="25dp"
+        tools:context=".announcements.CreateAnnouncementFragment">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:id="@+id/newAnnouncementTxt"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/newAnnouncementTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        android:hint="Announcement body" />
+        <TextView
+            android:id="@+id/newAnnounceHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_announcement"
+            android:textColor="@color/olive"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/pinAnnouncment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pin announcement to top of page"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newAnnouncementTxt" />
+        <TextView
+            android:id="@+id/cancelAnnounceBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:text="@string/cancel_underlined"
+            android:textColor="@color/greyText"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/newAnnounceHeader"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/postNewAnnouncementBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Post announcement"
-        app:layout_constraintTop_toBottomOf="@+id/pinAnnouncment"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <EditText
+            android:id="@+id/newAnnouncementTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/announcement_title"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newAnnounceHeader" />
 
-    <CheckBox
-        android:id="@+id/postToFb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Post to Facebook"
-        app:layout_constraintTop_toBottomOf="@id/postNewAnnouncementBtn"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <EditText
+            android:id="@+id/newAnnouncementTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/announcement_body"
+            android:inputType="textMultiLine"
+            android:scrollbars="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newAnnouncementTitle" />
 
-    <CheckBox
-        android:id="@+id/sendToListserv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send to Listserv"
-        app:layout_constraintTop_toBottomOf="@id/postToFb"
-        app:layout_constraintStart_toStartOf="@+id/postToFb"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <CheckBox
+            android:id="@+id/pinAnnouncment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pin_announcement_to_top_of_page"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newAnnouncementTxt" />
+
+        <Button
+            android:id="@+id/postNewAnnouncementBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/post_announcement"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pinAnnouncment" />
+
+        <CheckBox
+            android:id="@+id/postToFb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/post_to_facebook"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/postNewAnnouncementBtn" />
+
+        <CheckBox
+            android:id="@+id/sendToListserv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/send_to_listserv"
+            app:layout_constraintStart_toStartOf="@+id/postToFb"
+            app:layout_constraintTop_toBottomOf="@id/postToFb" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
