--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="goldenrod">#bf923d</color>
     <color name="olive">#313d23</color>
     <color name="greyBackground">#f5f5f4</color>
     <color name="greyText">#757575</color>
-
+    <color name="greyOverlay">#66808080</color>
 </resources>
