--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <ImageView
@@ -14,6 +15,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="10dp"
+            android:contentDescription="@string/profile_image"
             android:src="@drawable/km1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:text="Cynthia Sheng"
+            android:text="@string/cynthia_sheng"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/pfpImgProfile"
@@ -33,7 +35,7 @@
             android:id="@+id/bioTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Peace, love, Duncan"
+            android:text="@string/peace_love_duncan"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/profileNameTxt"
             app:layout_constraintTop_toBottomOf="@+id/profileNameTxt" />
@@ -48,12 +50,12 @@
             <com.google.android.material.chip.Chip
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="President" />
+                android:text="@string/president" />
 
             <com.google.android.material.chip.Chip
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="+ add position" />
+                android:text="@string/add_position" />
         </com.google.android.material.chip.ChipGroup>
 
         <com.google.android.material.tabs.TabLayout
