--- a/app/src/main/res/layout/shoutout_item.xml
+++ b/app/src/main/res/layout/shoutout_item.xml
@@ -31,20 +31,24 @@
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textStyle="bold"
             app:author="@{shoutout}"
             app:layout_constraintBottom_toTopOf="@id/pfp"
             app:layout_constraintStart_toEndOf="@id/pfp"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Kanga" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:paddingStart="10dp"
-            android:paddingEnd="10dp"
+            android:paddingEnd="0dp"
             android:textStyle="bold"
             app:date="@{shoutout}"
             app:layout_constraintBottom_toBottomOf="@+id/author"
@@ -56,12 +60,14 @@
             android:id="@+id/msg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:paddingStart="20dp"
-            android:paddingTop="3dp"
+            android:background="@drawable/rounded_corner"
+            android:paddingStart="10dp"
             android:paddingEnd="0dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/pfp"
             app:layout_constraintTop_toTopOf="@+id/pfp"
