--- a/app/src/main/res/layout/fragment_announcements.xml
+++ b/app/src/main/res/layout/fragment_announcements.xml
@@ -41,7 +41,7 @@
             android:visibility="invisible"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/announcementsContainer"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/greyOverlay" />
 
         <FrameLayout
