--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/rounded_bg"
         android:padding="25dp"
         tools:context=".announcements.CreateAnnouncementFragment">
 
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="@string/new_announcement"
             android:textColor="@color/olive"
-            android:textSize="25sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,16 +28,18 @@
             android:background="@color/transparent"
             android:text="@string/cancel_underlined"
             android:textColor="@color/greyText"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@id/newAnnounceHeader"
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="@id/newAnnounceHeader"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <EditText
             android:id="@+id/newAnnouncementTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
             android:hint="@string/announcement_title"
-            android:textSize="20sp"
+            android:textSize="26sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newAnnounceHeader" />
 
@@ -47,6 +49,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/announcement_body"
             android:inputType="textMultiLine"
+            android:textSize="20sp"
             android:scrollbars="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newAnnouncementTitle" />
