--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,11 +3,11 @@
     <style name="Theme.Nogrammersandroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/goldenrod</item>
-<!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+        <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/olive</item>
-<!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
+        <!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
@@ -15,7 +15,58 @@
         <!-- No action bar-->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <item name="android:textViewStyle">@style/RegularTextViewStyle</item>
+        <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
+        <item name="android:editTextStyle">@style/RegularEditTextStyle</item>
+        <item name="materialButtonStyle">@style/Widget.App.Button</item>
     </style>
+
+    <!-- Checkbox styling -->
+    <style name="Widget.App.CheckBox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.CheckBox</item>
+    </style>
+
+    <style name="ThemeOverlay.App.CheckBox" parent="">
+        <item name="colorOnSurface">@color/greyText</item>
+        <item name="colorSecondary">@color/goldenrod</item>
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Text appearances -->
+    <style name="TabHeader" parent="@android:style/TextAppearance">
+        <item name="android:textSize">30sp</item>
+        <item name="android:fontFamily">@font/acarisans_bold</item>
+        <item name="fontFamily">@font/acarisans_bold</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+    </style>
+
+    <style name="RegularTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textSize">19sp</item> <!-- 14px = 19sp -->
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+    </style>
+
+    <style name="RegularEditTextStyle" parent="android:Widget.EditText">
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+    </style>
+
+    <!-- Button styling -->
+    <style name="Widget.App.Button" parent="Widget.MaterialComponents.Button">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button</item>
+<!--        <item name="android:textAppearance">@style/TextAppearance.App.Button</item>-->
+<!--        <item name="shapeAppearance">@style/ShapeAppearance.App.SmallComponent</item>-->
+    </style>
+
+    <style name="ThemeOverlay.App.Button" parent="">
+        <item name="android:fontFamily">@font/acarisans_bold</item>
+        <item name="fontFamily">@font/acarisans_bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">0</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
-
-
