--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,8 @@
         <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
         <item name="android:editTextStyle">@style/RegularEditTextStyle</item>
         <item name="materialButtonStyle">@style/Widget.App.Button</item>
+        <item name="chipStyle">@style/Widget.App.Chip</item>
+        <item name="tabStyle">@style/Widget.App.TabLayout</item>
     </style>
 
     <!-- Checkbox styling -->
@@ -57,8 +59,6 @@
     <!-- Button styling -->
     <style name="Widget.App.Button" parent="Widget.MaterialComponents.Button">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button</item>
-<!--        <item name="android:textAppearance">@style/TextAppearance.App.Button</item>-->
-<!--        <item name="shapeAppearance">@style/ShapeAppearance.App.SmallComponent</item>-->
     </style>
 
     <style name="ThemeOverlay.App.Button" parent="">
@@ -67,6 +67,34 @@
         <item name="android:textSize">24sp</item>
         <item name="android:letterSpacing" tools:targetApi="lollipop">0</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Chip styling -->
+    <style name="Widget.App.Chip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/olive</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAppearance">@style/ChipText</item>
+    </style>
+
+    <style name="ChipText" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+        <item name="android:textSize">21sp</item>
+    </style>
+
+    <!-- Tab layout styling -->
+    <style name="Widget.App.TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabTextAppearance">@style/TextAppearance.App.TabLayout</item>
+        <item name="tabIndicatorColor">@color/olive</item>
+        <item name="tabTextColor">@color/olive</item>
+    </style>
+
+    <style name="TextAppearance.App.TabLayout" parent="@android:style/TextAppearance">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/raleway_regular</item>
+        <item name="fontFamily">@font/raleway_regular</item>
     </style>
 
 </resources>
