--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,14 +3,98 @@
     <style name="Theme.Nogrammersandroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/goldenrod</item>
-<!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+        <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/olive</item>
-<!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
+        <!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <!-- No action bar-->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="android:textViewStyle">@style/RegularTextViewStyle</item>
+        <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
+        <item name="android:editTextStyle">@style/RegularEditTextStyle</item>
+        <item name="materialButtonStyle">@style/Widget.App.Button</item>
+        <item name="chipStyle">@style/Widget.App.Chip</item>
+        <item name="tabStyle">@style/Widget.App.TabLayout</item>
     </style>
+
+    <!-- Checkbox styling -->
+    <style name="Widget.App.CheckBox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.CheckBox</item>
+    </style>
+
+    <style name="ThemeOverlay.App.CheckBox" parent="">
+        <item name="colorOnSurface">@color/greyText</item>
+        <item name="colorSecondary">@color/goldenrod</item>
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Text appearances -->
+    <style name="TabHeader" parent="@android:style/TextAppearance">
+        <item name="android:textSize">30sp</item>
+        <item name="android:fontFamily">@font/acarisans_bold</item>
+        <item name="fontFamily">@font/acarisans_bold</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+    </style>
+
+    <style name="RegularTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textSize">19sp</item> <!-- 14px = 19sp -->
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+    </style>
+
+    <style name="RegularEditTextStyle" parent="android:Widget.EditText">
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+    </style>
+
+    <!-- Button styling -->
+    <style name="Widget.App.Button" parent="Widget.MaterialComponents.Button">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Button" parent="">
+        <item name="android:fontFamily">@font/acarisans_bold</item>
+        <item name="fontFamily">@font/acarisans_bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">0</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Chip styling -->
+    <style name="Widget.App.Chip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/olive</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAppearance">@style/ChipText</item>
+    </style>
+
+    <style name="ChipText" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+        <item name="android:textSize">21sp</item>
+    </style>
+
+    <!-- Tab layout styling -->
+    <style name="Widget.App.TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabTextAppearance">@style/TextAppearance.App.TabLayout</item>
+        <item name="tabIndicatorColor">@color/olive</item>
+        <item name="tabTextColor">@color/olive</item>
+    </style>
+
+    <style name="TextAppearance.App.TabLayout" parent="@android:style/TextAppearance">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/raleway_regular</item>
+        <item name="fontFamily">@font/raleway_regular</item>
+    </style>
+
 </resources>
