--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,7 +46,7 @@
     </style>
 
     <style name="RegularTextViewStyle" parent="android:Widget.TextView">
-        <item name="android:textSize">19sp</item> <!-- 14px = 19sp -->
+        <item name="android:textSize">19sp</item>
         <item name="android:fontFamily">@font/acarisans_regular</item>
         <item name="fontFamily">@font/acarisans_regular</item>
     </style>
